add basic styling to header & nav

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: "LeHigh Regular";
-  src: url("fonts/lehigh-personal-regular.otf");
+  font-family: 'LeHigh Regular';
+  src: url("../fonts/lehigh-personal-regular.otf");
 }
 
 @font-face {
-  font-family: "LeHigh Bold";
-  src: url("fonts/lehigh-personal-bold.otf");
+  font-family: 'LeHigh Bold';
+  src: url("../fonts/lehigh-personal-bold.otf");
 }
 
 /* line 13, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
@@ -13,11 +13,48 @@
   margin: 0;
   padding: 0;
   border: 0;
+  font-family: 'LeHigh Regular', serif;
 }
 
-/* line 19, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
-body {
-  font-family: "LeHigh", serif;
+/* line 20, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+/* line 27, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+header img {
+  width: 70%;
+  max-width: 300px;
+}
+
+/* line 33, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+nav {
+  background-color: #ffffff;
+}
+
+/* line 35, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+nav ul {
+  list-style-type: none;
+}
+
+/* line 37, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+nav ul li {
+  display: inline-block;
+  padding: 10px;
+}
+
+/* line 40, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+nav ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #516a4a;
+  font-family: 'LeHigh Bold';
+  letter-spacing: .05rem;
 }
 
 /*# sourceMappingURL=../css/main.map */
