--- a/sass/main.scss
+++ b/sass/main.scss
@@ -89,6 +89,7 @@ p {
   .green-btn {
     width: 100px;
     text-align: center;
+    margin-top: 10px;
   }
 }
 
@@ -107,6 +108,21 @@ p {
 h3 {
   @extend .green-btn;
   display: inline-flex;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+
+  .hours {
+    background-color: $orange;
+    padding: 15px;
+    margin: 15px 0px 15px 0px;
+    
+    p {
+      color: $white;
+    }
+  }
 }
 
 section, footer {
