--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
   padding: 0;
   border: 0;
   font-family: 'LeHigh Regular', serif;
+  letter-spacing: .05rem;
 }
 
 header {
@@ -108,6 +109,8 @@ p {
 h3 {
   @extend .green-btn;
   display: inline-flex;
+  font-size: 1.3rem;
+  letter-spacing: .05rem;
 }
 
 .about {
@@ -118,9 +121,74 @@ h3 {
     background-color: $orange;
     padding: 15px;
     margin: 15px 0px 15px 0px;
-    
+    max-width: 425px;
+
     p {
       color: $white;
+    }
+  }
+}
+
+.callOutBlock {
+  max-width: 395px;
+  height: 330px;
+  display: flex;
+  align-items: center;
+}
+
+.decisions {
+  display: flex;
+  flex-direction: column;
+
+  .food {
+    background-image: url(../img/food-bg.jpg);
+  }
+
+  .dessert {
+    background-image: url(../img/flan-bg.jpg);
+  }
+
+  .drink {
+    background-image: url(../img/beer-bg.jpg);
+  }
+}
+
+.pull-quote {
+  background-color: $orange;
+  padding-top: 25px;
+  padding-bottom: 50px;
+
+  p{
+    color: $white;
+    font-size: 1.8rem;
+    line-height: 2.1rem;
+    margin-bottom: 20px;
+  }
+}
+
+.wht-btn {
+  font-family: 'Barlow Condensed', sans-serif;
+  color: $white;
+  text-transform: uppercase;
+  padding: 10px;
+  border: 1px $white solid;
+
+  &:hover {
+    background-color: $white;
+    color: $orange;
+  }
+}
+
+footer {
+  background-color: $tan;
+
+  p{
+    margin-bottom: 5px;
+  }
+  .social {
+    img {
+      max-width: 40px;
+      padding: 5px;
     }
   }
 }
